Fix full bleed images

--- a/css/ui/_base.scss
+++ b/css/ui/_base.scss
@@ -46,3 +46,9 @@ code {
   display: block;
   color: $colour-grey;
 }
+
+.full--bleed {
+  margin-left: -$large-padding;
+  margin-right: -$large-padding;
+  margin-bottom: 27px;
+}
