--- a/css/ui/modules/_post.scss
+++ b/css/ui/modules/_post.scss
@@ -1,8 +1,2 @@
 .post {
-
-  img {
-    margin-left: -$large-padding;
-    margin-right: -$large-padding;
-    max-width: $site-width;
-  }
 }
